# My_finances

./: .gitignore  Dockerfile  alembic.ini  config.py  docker-compose.yaml  env.py  main.py  pyproject.toml  redis_file.py  redis_test.py  security.py
api/: __init__.py  auth.py  category.py  category_handler.py  external_api.py  financial_report.py  handlers.py  login_handler.py  models.py  transaction.py  user.py  user_handlers.py
db/: dals.py  models.py  session.py
fastapi_my_finances/: main.py
fastapi_my_finances/core/: config.py
migrations/: env.py
migrations/versions/: 13b0f04fb4ff_add_new_models_in_db.py  17ac71d091b9_rename_user_id_to_id_in_users.py  27403b8f8581_sync_database.py  35ed144fba4a_comment.py  6c8315204d60_initial_migration.py  7dccdf45c155_rename_u_cat_id_to_category_id.py  7ffb0a450fd7_deletion_of_the_balance_column.py  8c77835277b9_nitial_migration.py  9139b0a59547_rename_user_categories_to_categories_.py  e9ba9a2a2a13_add_timezone_true.py  ecabfd4c6045_update_model_user.py
postgres-data/base/1/: 1259  2619  2696
postgres-data/global/: 1260  pg_control
postgres-data/pg_stat/: pgstat.stat
repository/: dals.py  hashing.py
schemas/: schemas.py
service/: auth.py  email_service.py  external_api.py  financial_report.py  pdf_generator.py  transaction.py  user.py
