[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = '^3.12'
fastapi = "^0.115.6"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
envparse = "^0.2.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
