[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = '^3.12'
fastapi = "^0.100.0"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = "^2.0.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
envparse = "^0.2.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
python-jose = "^3.3.0"
httpx = "^0.28.1"
redis = "^5.2.1"
setuptools = "^75.8.0"
aioredis = "2.0.0"
